# IMX6ULL_myself_exercise

100ask_imx6ull-sdk/: Linux-4.9.88.code-workspace
100ask_imx6ull-sdk/DevelopmentEnvConf/imx6ullModule/init.d/: S07hmi
100ask_imx6ull-sdk/Linux-4.9.88/myself_projects/gpio_interrupt/: gpio_interrupt.c
100ask_imx6ull-sdk/Linux-4.9.88/myself_projects/gpio_subsystem/: gpio_subsystem.c
100ask_imx6ull-sdk/Linux-4.9.88/myself_projects/led_driver/: led_driver.c  led_operation.c  led_operation.h  led_operation_demo.c  ledtest.c
100ask_imx6ull-sdk/Linux-4.9.88/myself_projects/led_platform_tree/: Makefile  Makefile备份  (+6 more)
cmake_exercise/exercise_1/: CMakeLists.txt
cmake_exercise/exercise_1/include/: header.h
cmake_exercise/exercise_1/src/: multiply.c  subtract.c
cmake_exercise/exercise_2/: App  CMakeLists.txt  main.c
cmake_exercise/exercise_2/src/: divide.c
lib/freetype-2.10.2/objs/: autofit.lo  bdf.lo  cff.lo  ftbase.lo  ftbbox.lo  ftbdf.lo  ftbitmap.lo  ftbzip2.lo  ftcache.lo  ftcid.lo  ftdebug.lo  ftfstype.lo  ftgasp.lo  ftglyph.lo  ftgxval.lo  ftgzip.lo  ftinit.lo  ftlzw.lo  ftmm.lo  ftotval.lo  ftpatent.lo  ftpfr.lo  ftstroke.lo  ftsynth.lo  ftsystem.lo  fttype1.lo  ftwinfnt.lo  libfreetype.la  pcf.lo  pfr.lo  psaux.lo  pshinter.lo  psnames.lo  raster.lo  sfnt.lo  smooth.lo  truetype.lo  type1.lo  type1cid.lo  type42.lo  (+1 more)
project_driver_test/: CMakeLists.txt
project_driver_test/.cache/clangd/index/: AD_touch.c.1359702DE878F5B1.idx  AD_touch.h.C3FAC4A813E50B3B.idx  FT5406EE8.c.CA086F67F34BF134.idx  FT5406EE8.h.EC77BC4F57AD7A57.idx  GC9A01.c.803E60042E170FC3.idx  GC9A01.h.28DEEA5FBEE1ADAE.idx  ILI9341.c.975EEA6E8F378033.idx  ILI9341.h.9C2C0742F716E83E.idx  R61581.c.E1159D28163AAFCC.idx  R61581.h.CFF86CE832355E0F.idx  SHARP_MIP.c.AD9C2138831DB4BA.idx  SHARP_MIP.h.23DA33F5B4232320.idx  SSD1963.c.243E845D1429C85A.idx  SSD1963.h.A45B5045551385FE.idx  ST7565.c.8EF32A44B10CC7D5.idx  ST7565.h.58F3AAF275A8F456.idx  UC1610.c.329B39857D6D0AC8.idx  UC1610.h.B2E8CFAFD79C75AE.idx  XPT2046.c.9490088737134DD3.idx  XPT2046.h.7A32F7DA2C53F157.idx  _test_template.c.6CD6C0E040CD5FFE.idx  animimg001.c.00E05FE10519A6FA.idx  animimg002.c.D4521D56ED11FB45.idx  animimg003.c.FC9CFA31A29A002E.idx  drm.c.345EDAE1C0504280.idx  drm.h.86C71400D6A80F19.idx  evdev.c.006F883B6B6D074A.idx  evdev.h.040F59B5C7DB3817.idx  fbdev.c.B1D054A79E0F57BA.idx  fbdev.h.C6019CB8BF34508A.idx  font_1.c.22A23DB2A9786AC7.idx  font_2.c.5FE2BA9A9D4CC05B.idx  font_3.c.AC18FBA83AACDBAC.idx  gifdec.c.3AB08F004C23E0DF.idx  gifdec.h.75AD3FC12202EF86.idx  gtkdrv.c.B49A208BC90443FA.idx  gtkdrv.h.EDA21EC7B1D0739C.idx  img_benchmark_cogwheel_alpha16.c.E0DB175965AB41F5.idx  img_benchmark_cogwheel_argb.c.6CB7DE1E77825C2A.idx  img_benchmark_cogwheel_chroma_keyed.c.47EAC60917577120.idx  (+642 more)
project_driver_test/include/: page_manager.h  ui.h
project_driver_test/page/: camera_page.c  font_image.c  main_page.c  page_manager.c
project_driver_test/sys/: main.c
project_driver_test/ui/: lv_conf.h  ui.c
(+16 files in other folders)
